@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2003/01/19 04:43:38 uebayasi Exp $
+# $NetBSD: Makefile,v 1.14 2003/01/24 04:22:42 jlam Exp $
 
 DISTNAME=	g-wrap-1.2.1
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=g-wrap/}
 
@@ -14,6 +15,9 @@ USE_BUILDLINK2=		YES
 USE_GMAKE=		YES
 
 GNU_CONFIGURE=		YES
+CONFIGURE_ARGS+=	--with-modules-dir=${GUILE14_PREFIX}/share/guile
+CONFIGURE_ENV+=		GUILE=${GUILE14}
+CONFIGURE_ENV+=		BUILD_GUILE=${GUILE14_CONFIG}
 CONFIGURE_ENV+=		ac_cv_path_RSCHEME="nope"
 
 USE_LIBTOOL=		YES
