@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2002/08/21 00:21:56 mjl Exp $
+@comment $NetBSD: PLIST,v 1.3 2003/01/24 04:22:42 jlam Exp $
 bin/g-wrap-config
 include/g-wrap-runtime-guile.h
 info/g-wrap.info
@@ -10,16 +10,16 @@ lib/libg-wrap-runtime-guile.so
 lib/libg-wrap-runtime-guile.so.2
 lib/libg-wrap-runtime-guile.so.2.0
 share/aclocal/g-wrap.m4
-share/guile/g-wrap.scm
-share/guile/g-wrap/g-translate.scm
-share/guile/g-wrap/guile-types.scm
-share/guile/g-wrap/output-file.scm
-share/guile/g-wrap/sorting.scm
-share/guile/g-wrapped/gw-runtime-spec.scm
-share/guile/g-wrapped/libgw-runtime.a
-share/guile/g-wrapped/libgw-runtime.la
-share/guile/g-wrapped/libgw-runtime.so
-share/guile/g-wrapped/libgw-runtime.so.0
-share/guile/g-wrapped/libgw-runtime.so.0.0
-@dirrm share/guile/g-wrapped
-@dirrm share/guile/g-wrap
+guile/1.4/share/guile/g-wrap.scm
+guile/1.4/share/guile/g-wrap/g-translate.scm
+guile/1.4/share/guile/g-wrap/guile-types.scm
+guile/1.4/share/guile/g-wrap/output-file.scm
+guile/1.4/share/guile/g-wrap/sorting.scm
+guile/1.4/share/guile/g-wrapped/gw-runtime-spec.scm
+guile/1.4/share/guile/g-wrapped/libgw-runtime.a
+guile/1.4/share/guile/g-wrapped/libgw-runtime.la
+guile/1.4/share/guile/g-wrapped/libgw-runtime.so
+guile/1.4/share/guile/g-wrapped/libgw-runtime.so.0
+guile/1.4/share/guile/g-wrapped/libgw-runtime.so.0.0
+@dirrm guile/1.4/share/guile/g-wrapped
+@dirrm guile/1.4/share/guile/g-wrap
