@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1211 2003/01/23 23:05:19 jlam Exp $
+$NetBSD: CHANGES,v 1.1212 2003/01/24 04:23:17 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -389,3 +389,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated R to 1.6.2 [markd 2003-01-23]
 	Updated kermit to 8.0.206nb1 [jmmv 2003-01-23]
 	Updated cups to 1.1.18nb1 [jlam 2003-01-23]
+	Updated g-wrap to 1.2.1nb1 [jlam 2003-01-23]
